# socialnews

./: .pre-commit-config.yaml  Dockerfile  README.md  celery_tasks.py  celeryconfig.py  docker-compose.yml  flower.Dockerfile  logs.txt  pyproject.toml  requirements.txt  worker.Dockerfile
.github/workflows/: github-ci.yaml
forum/: forms.py  models.py  urls.py
forum/templates/forum/: newcomment.html  post.html
socialnews/: asgi.py  settings.py
src/: download_bart.py  read_bbc_dataset.py  requirements.txt
src/forum/: admin.py  document.py  forms.py  models.py  syntheticdata.py  tests.py  urls.py  views.py
src/forum/migrations/: 0001_initial.py  0002_secrets.py
src/forum/templates/: login.html
src/forum/templates/forum/: base.html  changepassword.html  checkpassword.html  feed.html  index.html  local.html  main.html  newcomment.html  newtopic.html  post.html  profile.html  register.html  search.html
src/socialnews/: __init__.py  celery_main.py  celeryconfig.py  settings.py  tasks.py  urls.py  wsgi.py
src/user/: forms.py  models.py  urls.py  views.py
src/user/migrations/: 0001_initial.py
src/user/templates/user/: base.html  changepassword.html  checkpassword.html  login.html  profile.html  register.html
