[tool.poetry]
name = "socialnews"
version = "0.1.0"
description = ""
authors = ["MateuszPuto <mateuszmputo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python=">=3.8,<3.9.7 || >3.9.7,<4.0"
django = "^4.1.3"
psycopg2-binary = "^2.9.5"
django-environ = "^0.9.0"
django-extensions = "^3.2.1"
redis = "^4.4.0"
celery = "^5.2.7"
flower = "^1.2.0"
rabbitmq = "^0.2.0"
pre-commit = "^2.20.0"
django-cleanup = "^6.0.0"
faker = "^15.3.4"
elasticsearch = "7.17.8"
geocoder = "^1.38.1"
django-ipware = "^4.0.2"
numpy = "^1.24.1"
folium = "^0.14.0"
django-elasticsearch-dsl = "^7.2.2"
streamlit = "^1.16.0"
streamlit-folium = "^0.10.0"
transformers = "^4.25.1"
torch = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
